# ESPro_AI

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/: copilot-instructions.md
.github/agents/: ai-pipeline.md  firmware-dev.md  hardware-debug.md  perf-analyst.md
components/i2c_bsp/: CMakeLists.txt  i2c_bsp.c  i2c_bsp.h
components/lcd_bl_pwm_bsp/: CMakeLists.txt  lcd_bl_pwm_bsp.c  lcd_bl_pwm_bsp.h
components/minimp3/: CMakeLists.txt  minimp3_impl.c
main/: CMakeLists.txt  hw_config.h  idf_component.yml  secrets.h.example
main/ai/: action_executor.c  action_executor.h  agent_orchestrator.c  agent_orchestrator.h  intent_engine.c  intent_engine.h  llm_client.c  llm_client.h  proactive_agent.c  proactive_agent.h  stt_client.c  stt_client.h  tts_client.h  voice_pipeline.c  voice_pipeline.h
main/core/: event_bus.c  event_bus.h  main.c  os_kernel.c  os_kernel.h  perf_monitor.c  perf_monitor.h
main/hal/: audio.c  audio.h  display.c  display.h  imu.c  imu.h  rtc.c  rtc.h  touch.c  touch.h
main/services/: config_manager.c  config_manager.h  meeting_service.c  meeting_service.h  mqtt_service.c  mqtt_service.h  music_stream.c  music_stream.h  ota_manager.c  ota_manager.h  power_manager.c  power_manager.h  storage.c  storage.h  timer_service.c  timer_service.h  weather.c  weather.h  webserver.c  webserver.h  wifi_manager.c  wifi_manager.h
main/test/: perf_test.c  perf_test.h
main/ui/: theme.c  theme.h  ui_manager.c  ui_manager.h
main/ui/screens/: scr_apps.c  scr_health.c  scr_home.c  scr_meeting.c  scr_settings.c
main/ui/widgets/: wgt_status_bar.c  wgt_voice_indicator.c
tools/: perf_analyzer.py  requirements.txt
tools/meeting_assistant/: ai_notes.py  audio_capture.py  build.bat  companion_app.py  config.json  espro_ai_companion.spec  meeting_assistant.py  meeting_controller.py  meeting_detector.py  mqtt_bridge.py  requirements.txt  settings_gui.py
