idf_component_register(
    SRCS
        "core/main.c"
        "core/os_kernel.c"
        "core/event_bus.c"
        "core/perf_monitor.c"
        "hal/display.c"
        "hal/touch.c"
        "hal/audio.c"
        "hal/imu.c"
        "hal/rtc.c"
        "ui/ui_manager.c"
        "ui/theme.c"
        "ui/screens/scr_home.c"
        "ui/screens/scr_apps.c"
        "ui/screens/scr_settings.c"
        "ui/widgets/wgt_status_bar.c"
        "ui/widgets/wgt_voice_indicator.c"
        "ai/agent_orchestrator.c"
        "ai/voice_pipeline.c"
        "ai/llm_client.c"
        "ai/stt_client.c"
        "ai/intent_engine.c"
        "services/wifi_manager.c"
        "services/storage.c"
        "test/perf_test.c"
    INCLUDE_DIRS
        "."
        "core"
        "hal"
        "ui"
        "ai"
        "services"
        "test"
    PRIV_REQUIRES
        driver
        esp_lcd
        esp_timer
        esp_wifi
        esp_http_client
        esp_psram
        nvs_flash
        json
        i2c_bsp
        lcd_bl_pwm_bsp
        littlefs
        esp_codec_dev
        esp_audio_codec
)
