idf_component_register(
    SRCS
        "core/main.c"
        "core/os_kernel.c"
        "core/event_bus.c"
        "core/perf_monitor.c"
        "hal/display.c"
        "hal/touch.c"
        "hal/audio.c"
        "hal/imu.c"
        "hal/rtc.c"
        "ui/ui_manager.c"
        "ui/theme.c"
        "ui/screens/scr_home.c"
        "ui/screens/scr_apps.c"
        "ui/screens/scr_settings.c"
        "ui/screens/scr_health.c"
        "ui/screens/scr_meeting.c"
        "ui/widgets/wgt_status_bar.c"
        "ui/widgets/wgt_voice_indicator.c"
        "ai/agent_orchestrator.c"
        "ai/voice_pipeline.c"
        "ai/llm_client.c"
        "ai/stt_client.c"
        "ai/intent_engine.c"
        "ai/action_executor.c"
        "ai/proactive_agent.c"
        "services/wifi_manager.c"
        "services/storage.c"
        "services/config_manager.c"
        "services/webserver.c"
        "services/ota_manager.c"
        "services/weather.c"
        "services/timer_service.c"
        "services/music_stream.c"
        "services/power_manager.c"
        "services/mqtt_service.c"
        "services/meeting_service.c"
        "test/perf_test.c"
    INCLUDE_DIRS
        "."
        "core"
        "hal"
        "ui"
        "ai"
        "services"
        "test"
    PRIV_REQUIRES
        driver
        esp_lcd
        esp_timer
        esp_wifi
        esp_http_client
        esp_http_server
        esp_https_ota
        esp-tls
        esp_psram
        esp_app_format
        app_update
        nvs_flash
        json
        i2c_bsp
        lcd_bl_pwm_bsp
        littlefs
        esp_codec_dev
        esp_audio_codec
        minimp3
        mqtt
)
